# fritzbox-munin

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: verify-plugin-scripts.yml
src/: fritzbox_config.py  fritzbox_dsl.py  fritzbox_ecostat.py  fritzbox_energy.py  fritzbox_file_session.py  fritzbox_wifi_load.py  test_fritzbox_file_session.py  test_fritzbox_wifi_load.py
tests/: conftest.py  test_fritzbox_config.py  test_fritzbox_file_session.py  test_fritzbox_munin_plugin_interface.py  test_response_mock.py
tests/fixtures/fritzbox7530ax-7.80/: chan_data_lua.json
