[project]
name = "fritzbox-munin"
version = "12.0.0"
description = "A collection of Munin plugins to monitor your AVM FRITZ!Box router."
requires-python = ">=3.9"
dependencies = [
    "fritzconnection>=1.12.0",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
